# media_rating

./: .gitignore  Cargo.toml  Example.xlsx  Makefile  README.md  icon.icns
desktop-app/: Cargo.toml  Example.xlsx  icon.icns
desktop-app/src/: home_screen.rs  main.rs  main_screen.rs  ranking_screen.rs
src/: app.rs  image_picker_popup.rs  image_search.rs  image_store.rs  main.rs  model.rs  popup.rs  ranking_screen.rs  splash_screen.rs  spreadsheet.rs
web/: .env.example  .gitignore  Makefile  README.md  components.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.e2e.json  tsconfig.json  vite.config.e2e.ts  vite.config.ts  vitest.config.ts  wrangler.e2e.jsonc  wrangler.jsonc
web/e2e/: admin.spec.ts  auth-flow.spec.ts  base.ts  constants.ts  entry-operations.spec.ts  helpers.ts  profiles.spec.ts  queue.spec.ts  ranking.spec.ts  session-expiry.spec.ts
web/migrations/: 0001_app_schema.sql  0002_auth_rate_limit.sql  0003_clear_phantom_image_keys.sql  0004_entry_queue.sql  0005_queue_images.sql  0006_image_prompt_settings.sql  0007_show_star_ratings.sql  0008_elo_prior_star_curve.sql  0009_free_rank_match_history_index.sql  0010_category_star_curve_and_session_count.sql  0011_random_audit_sessions.sql  0012_remove_elo_and_match_history.sql  0013_deleted_item_cleanup_indexes.sql  0014_profiles_friends_public_rankings.sql  0015_remove_star_ratings.sql  0016_user_follows.sql  0017_admin_support.sql  0018_queue_randomization.sql  0019_remove_first_consumed_at.sql
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/scripts/: admin-role.mjs  clear-auth-rate-limits.mjs  create-d1-if-needed.mjs  create-password-reset-link.mjs  create-r2-if-needed.mjs  reset-free-rank-data.sql  verify-deploy-config.mjs
web/src/: env.d.ts  routeTree.gen.ts  router.tsx
web/src/components/: AccountMenu.tsx  AuthPage.tsx  BinaryRankPanel.tsx  CategoryListItem.tsx  ConfirmDialog.tsx  (+9 more)
web/tests/: follows.test.ts  imageSearch.test.ts  importExport.test.ts  ranking.test.ts
(+121 files in other folders)
