[package]
name = "Media_Rating"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
console = "0.15.8"
eframe = "0.28.1"
egui = "0.28.1"
image = "0.25.1"
native-dialog = "0.7.0"
rand = "0.8.5"
rust_xlsxwriter = "0.71.0"
image_search = { version = "0.4", features = ["blocking"] }
reqwest = {version = "0.12.5", features = ["blocking"]}
