[package]
name = "Media_Rating"
version = "0.1.0"
authors = ["Edward Stanford"]
edition = "2021"
description = "A simple app that uses an elo system to help you rate media you have consumed."

[dependencies]
calamine = "0.25.0"
console = "0.15.8"
eframe = "0.28.1"
egui = "0.28.1"
image = "0.25.1"
native-dialog = "0.7.0"
rand = "0.8.5"
rust_xlsxwriter = "0.71.0"
reqwest = {version = "0.11", features = ["blocking", "cookies"]}
serde_json = "1.0.146"

[package.metadata.bundle]
name = "Media Rating"
identifier = "sparklyunicorns.mediarating"
icon = ["./icon.icns"]
